# modules/fbs-core/api/api-docs.yml
@@ -1750,6 +1750,62 @@ paths:
           description: Forbidden
         "404":
           description: Not Found
+  "/users/{uid}/courses/{cid}/tasks/{tid}/submissions/{sid}/content":
+    get:
+      operationId: getCourseTaskSubmissionsContent
+      tags:
+        - Submission
+      summary: Get the submission content for a task
+      parameters:
+        - name: uid
+          in: path
+          description: user id
+          required: true
+          schema:
+            type: integer
+        - name: cid
+          in: path
+          description: course id
+          required: true
+          schema:
+            type: integer
+        - name: tid
+          in: path
+          description: task id
+          required: true
+          schema:
+            type: integer
+        - name: sid
+          in: path
+          description: submission id
+          required: true
+          schema:
+            type: integer
+        - in: query
+          name: passed
+          description: Filters only the passed submissions
+          schema:
+            type: boolean
+      responses:
+        "200":
+          description: OK
+          headers:
+            Authorization:
+              description: Bearer
+              schema:
+                type: string
+          content:
+            "*/*":
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Submission"
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not Found
   "/users/{uid}/courses/{cid}/tasks/{tid}/submissions/{sid}/subresults":
     get:
       operationId: getCourseTaskSubmissionSubresults
